Fixed some overlapping

--- a/www/Header.css
+++ b/www/Header.css
@@ -20,7 +20,7 @@ header>h1{
     background:url(https://media.giphy.com/media/df9PH5lZbnHlC/giphy.gif);
     background-size:cover;
     width:100%;
-    height:700px;
+    height:800px;
     position:fixed;
     top:100px;
 }
@@ -30,5 +30,5 @@ header>h1{
     position:relative;
     top:1000px;
     background:white;
-    height:1600px;
+    height:2000px;
 }
